--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,4 +71,17 @@ dependencies {
     implementation("com.google.android.exoplayer:exoplayer-ui:2.18.2")
     implementation "androidx.compose.animation:animation-core:1.1.0"
     implementation("io.coil-kt:coil-compose:2.4.0")
+
+    def camerax_version = "1.3.0-beta02"
+    // The following line is optional, as the core library is included indirectly by camera-camera2
+    implementation "androidx.camera:camera-core:${camerax_version}"
+    implementation "androidx.camera:camera-camera2:${camerax_version}"
+    // If you want to additionally use the CameraX Lifecycle library
+    implementation "androidx.camera:camera-lifecycle:${camerax_version}"
+    // If you want to additionally use the CameraX VideoCapture library
+    implementation "androidx.camera:camera-video:${camerax_version}"
+    // If you want to additionally use the CameraX View class
+    implementation "androidx.camera:camera-view:${camerax_version}"
+    // If you want to additionally use the CameraX Extensions library
+    implementation "androidx.camera:camera-extensions:${camerax_version}"
 }
