--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,12 +5,12 @@ plugins {
 
 android {
     namespace 'com.ph.syntex_error.phui'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.ph.syntex_error.phui"
         minSdk 21
-        targetSdk 33
+        targetSdk 34
         versionCode 1
         versionName "1.0"
 
@@ -71,6 +71,9 @@ dependencies {
     implementation("com.google.android.exoplayer:exoplayer-ui:2.18.2")
     implementation "androidx.compose.animation:animation-core:1.1.0"
     implementation("io.coil-kt:coil-compose:2.4.0")
+
+    def accompanist_version = "0.31.2-alpha"
+    implementation "com.google.accompanist:accompanist-permissions:$accompanist_version"
 
     def camerax_version = "1.3.0-beta02"
     // The following line is optional, as the core library is included indirectly by camera-camera2
