--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,16 +66,14 @@ dependencies {
     implementation "com.google.accompanist:accompanist-pager:0.28.0"
     implementation "com.google.accompanist:accompanist-pager-indicators:0.28.0"
 
-    implementation("com.google.android.exoplayer:exoplayer-core:2.18.2")
-    implementation("com.google.android.exoplayer:exoplayer-dash:2.18.2")
-    implementation("com.google.android.exoplayer:exoplayer-ui:2.18.2")
-    implementation "androidx.compose.animation:animation-core:1.1.0"
+    implementation "androidx.media3:media3-exoplayer:1.1.1"
+    implementation "androidx.media3:media3-ui:1.1.1"
     implementation("io.coil-kt:coil-compose:2.4.0")
 
     def accompanist_version = "0.31.2-alpha"
     implementation "com.google.accompanist:accompanist-permissions:$accompanist_version"
 
-    def camerax_version = "1.3.0-beta02"
+    def camerax_version = "1.3.0-rc01"
     // The following line is optional, as the core library is included indirectly by camera-camera2
     implementation "androidx.camera:camera-core:${camerax_version}"
     implementation "androidx.camera:camera-camera2:${camerax_version}"
@@ -87,4 +85,7 @@ dependencies {
     implementation "androidx.camera:camera-view:${camerax_version}"
     // If you want to additionally use the CameraX Extensions library
     implementation "androidx.camera:camera-extensions:${camerax_version}"
+    implementation 'com.github.yyued:SVGAPlayer-Android:2.6.1'
+
+    implementation("io.coil-kt:coil-video:2.4.0")
 }
